improve help message for time

--- a/form.yml
+++ b/form.yml
@@ -9,8 +9,8 @@ form:
 attributes:
   time:
     widget: "text_field"
-    label: "Running time [format: 01:00:00]"
-    value: "02:00:00"
+    label: "Running time [format: dd-hh:mm:ss]"
+    value: "03:00:00"
 
   mem_gb:
     widget: "number_field"
