--- a/manifest.yml
+++ b/manifest.yml
@@ -4,9 +4,14 @@ category: Interactive Apps
 subcategory: Servers
 role: batch_connect
 description: |
-  This app was developped for the UNIGE community by the [Bioinformatics Support Platform].
-  It can launch [RStudio Server], an IDE for [R] on Baobab HPC cluster.
+  The [Bioinformatics Support Platform] has developped this app for UNIGE community.
+  It can launch a [RStudio Server], an IDE for [R] on Baobab, the [HPC cluster of the university].
+  The server is embedded into a flexible [singularity] container.
+  The code is available on [GitHub].
 
   [Bioinformatics Support Platform]: https://www.unige.ch/medecine/bioinformatics/
   [RStudio Server]: https://www.rstudio.com/products/rstudio-server/
   [R]: https://www.r-project.org/
+  [Baobab]: https://www.unige.ch/eresearch/en/services/hpc/
+  [HPC cluster of the university]: https://singularityhub.github.io
+  [GitHub]: https://github.com/BioinfoSupport/ood-rstudio-baobab
