--- a/form.yml
+++ b/form.yml
@@ -44,6 +44,6 @@ attributes:
       - [ "ngs_v1.1.sif", "/acanas/m-BioinfoSupport/singularity/ngs_v1.1.sif" ]
       - [ "docker://unigebsp/ngs", "docker://unigebsp/ngs" ]
       - [ "docker://bioconductor/bioconductor_docker:RELEASE_3_18", "docker://bioconductor/bioconductor_docker:RELEASE_3_18" ]
-      - [ "docker://rocker/rstudio:4.3.2", "docker://rocker/rstudio;4.3.2" ]
+      - [ "docker://rocker/rstudio:4.3.2", "docker://rocker/rstudio:4.3.2" ]
       
       
