--- a/form.yml
+++ b/form.yml
@@ -2,7 +2,7 @@
 cluster: "baobab"
 form:
   - image
-  - partition
+  - auto_queues
   - time
   - mem_gb
   - cpus
@@ -27,14 +27,6 @@ attributes:
     min: 1
     max: 32
     step: 1
-
-  partition:
-    widget: select
-    label: "Partition"
-    value: "shared-cpu"
-    options:
-      - [ "shared-cpu", "shared-cpu" ]
-      - [ "shared-bigmem", "shared-bigmem"]
 
   image:
     widget: "text_field"
